# censere

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CITATION.cff  DEVELOPER.md  Dockerfile  LICENSE.md  README.md  RESOURCES.md  build-all.ps1  build-all.sh  pyproject.toml  pytest.ini  requirements.txt  run-sims.sh  run-smoke.sh  run-sql-tracing.sh  setup.py  test-notebook.R  test-notebook.Rmd  test-notebook.sh
.github/workflows/: docker-image.yml
censere/: __init__.py  cli.py  dashboard.py  generator.py  merge-db.py  version.py  viewer.py
censere/actions/: __init__.py  families.py
censere/assets/: s1.css  styles.css
censere/cmds/: dashboard.py  generator.py  merge.py
censere/cmds/helpers/: __init__.py  generator.py
censere/config/: __init__.py
censere/db/: __init__.py  local.py
censere/events/: __init__.py  callbacks.py  store.py
censere/models/: __init__.py  astronaut.py  base.py  colonist.py  demographics.py  events.py  functions.py  martian.py  names.py  populations.py  relationship.py  resources.py  resourceusage.py  settler.py  simulation.py  summary.py  triggers.py
censere/utils/: __init__.py  earth.py  random.py  resources.py  sols.py
docs/: index.html
docs/notebooks/example/: index.html  populations.html  resources.html  search.json
docs/notebooks/example/index_files/libs/bootstrap/: bootstrap.min.css
docs/notebooks/example/site_libs/bootstrap/: bootstrap.min.css
notebooks/: Makefile  README.md  _quarto.yml  index.qmd  populations.qmd  resources.qmd
notebooks/summary/: summary.qmd
scripts/: build-image.sh  build.sh  lint.sh  push.sh  standard-args.sh  tag.sh  test.sh
sims/: 100yr-default.params  56a5268a-4c57-4b9f-95d8-1b9c47dc028e.db  default.params  multi-sims.params  no-resources.params  single-ship.params  smoke-test.params
tests/: conftest.py  test_db1_a.py  test_db1_b.py  test_db2_a.py  test_db3_a.py  test_db4_a.py
