[build-system]
requires = [
    "setuptools"
    , "wheel"
    , "build"
]
build-backend = "setuptools.build_meta"

[project]
name = "censere"
version = "0.5.0"
authors = [
    {name = "Richard Offer", email = "richard@whitequeen.com"},
]
description = "'Mars Population Simulation software."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "attrs",
    "click",
    "Cython",
    "dash",
    "dash-core-components",
    "dash-html-components",
    "dash-table",
    "exceptiongroup",
    "Flask",
    "iniconfig",
    "itsdangerous",
    "Jinja2",
    "MarkupSafe",
    "matplotlib",
    "numpy",
    "packaging",
    "pandas",
    "peewee",
    "pip",
    "plotly",
    "pluggy",
    "py-cpuinfo",
    "pyparsing",
    "pytest",
    "pytest-benchmark",
    "python-dateutil",
    "pytz",
    "setuptools",
    "six",
    "tenacity",
    "tomli",
    "Werkzeug",
    "wheel"
]

[tool.setuptools]
packages = [
        'censere',
        'censere.actions',
        'censere.config',
        'censere.cmds',
        'censere.db',
        'censere.events',
        'censere.models',
        'censere.utils'

]


[project.scripts]
mars-censere = "censere.cli:cli"

