[build-system]
requires = [
    "setuptools"
    , "wheel"
    , "build"
]
build-backend = "setuptools.build_meta"

[project]
name = "censere"
version = "0.5.0"
authors = [
    {name = "Richard Offer", email = "richard@whitequeen.com"},
]
description = "'Numerical Simulation Framework for Modelling the Human Settlement of Mars"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "attrs",
    "bandit",
    "click",
    "Cython",
    "exceptiongroup",
    "iniconfig",
    "isort",
    "itsdangerous",
    "MarkupSafe",
    "matplotlib",
    "numpy",
    "packaging",
    "pandas",
    "peewee",
    "pip",
    "pluggy",
    "py-cpuinfo",
    "pyparsing",
    "pylint",
    "pytest",
    "pytest-benchmark",
    "python-dateutil",
    "pytz",
    "setuptools",
    "six",
    "tomli",
    "wheel"
]

[tool.setuptools]
packages = [
        'censere',
        'censere.actions',
        'censere.config',
        'censere.cmds',
        'censere.db',
        'censere.events',
        'censere.models',
        'censere.utils'

]

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests", "path/to/file"]

[project.scripts]
mars-censere = "censere.cli:cli"
